--- a/README
+++ b/README
@@ -4,7 +4,7 @@
 Un script .sh pour automatiser l'installation d'une instance eZPublish.
 
 Ce script fait :
- - extrait un archive ou copie un dossier existant d'une instance vierge EZ
+ - extrait un archive ou copie un dossier existant d'une instance vierge EZ dans le repertoire des sites web
  - crée une base de donné pour l'instance EZ
  - crée un fichier vhost dans sites-available de apache
  - met à jour host dans /etc
@@ -21,6 +21,7 @@ Le projet comprends :
 	- ezinit_full.sh (le script à lancer)
 	- ezinit_header.sh (header qui contient des variables à configurer)
 	- generic_functions.sh (fichier qui contient des function utilisées par le script)
+	- ezinit_cleanup.sh ( script de nettoyage )
 
 
 Vous pouvez placer les deux modeles (ez_generic_vhost, ez_generic_initdb.sql) la ou vous voulez. (aussi les laisser ou ils sont ;)
@@ -34,15 +35,26 @@ ADRESSEIP="127.0.0.1" #adresse IP pour le site (normalement 127.0.0.1)
 MYSQLCONNECT="-u root" #connexion à mysql : user et pswd
 MODELEMYSQL="/data/home/mpasquesi/DEV/conf/ez_generic_initdb.sql" #chemin de ez_generic_initdb.sql
 WORKPATH="/data/home/mpasquesi/DEV/" #chemin du dossier de travail
+
+
 Le script à lancer est ezinit_full.sh.
 Pendant l'execution du script, on vous demandera le nom du projet, qui sera utilisé pour nommer le dossier de l'instance ezpublish, nommer la base de donné et configurere le vhost.
 L'adresse du site eZPublish sera {nom_du_projet}.local et le BO admin.{nom_du_projet}.local .
 Chaque fois que gedit s'ouvre, c'est pour verifier que le traitement sur le fichier en question c'est bien passé. Si necessaire apporter les eventuelles modifications et puis fermer ! Le script attend la fermeture de gedit pour continuer !
 
 
+Dans le cas ou quelque chose c'est mal passé ou si on veut tout refaire,
+le script ezinit_cleanup.sh
+s'occupe d'effacer tout ou seulement ce qu'on desire :
+ - instance EZ
+ - base de donné
+ - vhost
+ - entrées dans /etc/hosts
+
+
 @TODO :
 Il faudrait pouvoir configurer le nom du vhost et des url des sites eZPublish, comme pour l'instant c'est en local par default.
-Il faudrait faire un script de cleanup, dans le cas ou on fait un erreur et on voudrait refaire une installation, pour ne pas devoir supprimer manuellement tous les fichiers, la base de donné, le vhost, etc.
+
 Je pense que on peut faire pas mal d'ameliorations, donc n'hesitez pas à le reprendre e y travailler dessous si vous en avez envie ;)
 
 
